Resolve omniauth security warning (CVE 2015 9284)
The request phase of the OmniAuth Ruby gem is vulnerable to Cross-Site Request Forgery when used as part of the Ruby on Rails framework, allowing accounts to be connected without user intent, user interaction, or feedback to the user. This permits a secondary account to be able to sign into the web application as the primary account.

Details about how to work around this issue:
https://github.com/omniauth/omniauth/wiki/Resolving-CVE-2015-9284

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -37,7 +37,7 @@
               Donate
         - if !logged_in?
           %li
-            = link_to '/auth/github' do
+            = link_to '/auth/github', method: :post do
               %span
                 Sign in
         - else
